# jk-webapi

./: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: providers.tsx
components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  scroll-area.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  use-toast.ts
lib/: base64.ts  clipboard.ts  request.ts  sign.ts  storage.ts  time.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
types/: crypto-js.d.ts  radix-ui__react-slot.d.ts
