[package]
name = "jk-webapi-helper"
version = "0.1.0"
description = "Tauri desktop shell for jk-webapi-helper"
authors = ["jk-webapi-helper"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"

[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
codegen-units = 1

[workspace]
members = ["."]
